# mnb-image-analysis

./: .buildinfo  .gitignore  README.html  README.md  _config.yml  _toc.yml  book-config.yml  book-toc.yml  genindex.html  index.html  objects.inv  pyproject.toml  search.html  searchindex.js
.github/workflows/: deploy-jupyter-book.yml  test-notebooks.yml  test-pixi-install.yml  test_notebooks.yml
_sources/book/: further_reading.md  landing.md  notebooks.md  schedule.md
_sources/book/setup/: install_python.md
_sources/materials/feature_extraction/: feature_extraction.ipynb
book/: acknowledgements.html  feature_extraction.html  feature_extraction.ipynb  feedback.html  feedback.md  further_reading.html  image_analysis_intro.html  image_analysis_intro.md  image_processing_book.html  image_processing_book.ipynb  landing.html  landing.md  notebooks.html  notebooks.md  schedule.html  schedule.md
book/setup/: computer_setup.html  computer_setup.md  download_example_data.md  install_python.html  install_python.md  setup_environment.html  setup_environment.md
data/: blobs.tif  blobs_noisy.tif  blobs_shaded.tif
materials/: environment.yml  example_notebook.html  example_notebook.ipynb
materials/feature_extraction/: feature_extraction.html  feature_extraction.ipynb
materials/image_analysis/: landing.md
materials/image_handling/: image_handling.html  image_handling.ipynb  landing.md
materials/image_handling/data/: nuclei_slice.tif
materials/image_processing/: image_processing.html  image_processing.ipynb
testing/: notebooks_to_test.txt
