[project]
authors = [{name = "Laurent Guerard", email = "laurent.guerard@unibas.ch"}]
dependencies = []
name = "MNB_image_analysis"
requires-python = ">= 3.11"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64", "osx-64", "win-64", "osx-arm64"]

[tool.pixi.pypi-dependencies]
mnb_image_analysis = { path = ".", editable = true }

[tool.pixi.tasks]

[tool.pixi.dependencies]
numpy = ">=2.4.2,<3"
pandas = ">=3.0.1,<4"
scikit-image = ">=0.26.0,<0.27"
matplotlib = ">=3.10.8,<4"
bioio = ">=3.2.0,<4"
pillow = ">=12.1.1,<13"
scipy = ">=1.17.1,<2"
tifffile = ">=2026.2.24,<2027"
python = "3.11.*"
jupyterlab = ">=4.5.5,<5"
stackview = ">=0.19.1,<0.20"
