[project]
authors = [
    { name = "Laurent Guerard", email = "laurent.guerard@unibas.ch" },
    { name = "Marvin Albert", email = "marvin.albert@bsse.ethz.ch" },
    { name = "Niklas Khoss", email = "niklas.khoss@fmi.ch" },
    { name = "Rao Rohan Girish", email = "r.rohangirish@unibas.ch" },
    { name = "Loïc Sauteur", email = "loic.sauteur@unibas.ch" },
]
name = "mnb-image-analysis"
requires-python = ">= 3.11"
version = "0.1.0"
dependencies = ["cellpose>=3.0.9,<4"]

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64", "osx-64", "osx-arm64", "win-64"]

[tool.pixi.pypi-dependencies]
# mnb_image_analysis = { path = ".", editable = true }

[tool.pixi.tasks]
#    To download a switch drive folder containing multiple files (instead of single zip)
# 1. Create a folder on switch drive
# 2. share the folder as a "Public links" for download
# 3. copy the link and add '/download' at the end
# This will download and extract to './example_data/**name of the switch drive folder**'
# FIXME/TODO: change the download path (currently folder with ipynb files from last year)
# download_data = "curl -L -o example_data.zip https://drive.switch.ch/index.php/s/IuieJq4Nz0FUmNn/download"

# Below the same comannt but with unzip, but unzip does not exist for windows.
# Pyhton script required for crossplatform functionality.
#download_data = """
#mkdir -p example_data &&
#[ -f example_data.zip ] || curl -L -o example_data.zip https://drive.switch.ch/index.php/s/IuieJq4Nz0FUmNn/download &&
#unzip -o example_data.zip -d example_data/
#"""

[tool.pixi.dependencies]
numpy = ">=2.4.2,<3"
pandas = ">=3.0.1,<4"
scikit-image = ">=0.26.0,<0.27"
matplotlib = ">=3.10.8,<4"
bioio = ">=3.2.0,<4"
pillow = ">=12.1.1,<13"
scipy = ">=1.17.1,<2"
tifffile = ">=2026.2.24,<2027"
jupyterlab = ">=4.5.5,<5"
python = "3.11.*"
stackview = ">=0.19.1,<0.20"
ipympl = ">=0.10.0,<0.11"
curl = "*"
napari = ">=0.6.6,<0.7"
pooch = ">=1.9.0,<2"
seaborn = ">=0.13.2,<0.14"
bioio-tifffile = ">=1.3.0,<2"
pytorch-cpu = ">=2.10.0,<3"
# unzip = "*" # not available on Windows...

[tool.pixi.feature.test.dependencies]
pytest = ">=9.0.0,<10"
nbmake = ">=1.5.0,<2"

[tool.pixi.environments]
test = ["test"]
